--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <img src="bikcraft.svg" alt="Bikcraft">
+  <img src="./bikcraft.svg" alt="Bikcraft">
   <nav class="menu">
     
     <a href="/">Sobre</a>
@@ -28,24 +28,24 @@
       <a class="botao" href="/">Ver Mais</a>
     </div>
 
-    <img class="bicicleta" src="bicicleta.jpg" alt="Bicicleta Bikcraft Preta">
+    <img class="bicicleta" src="./bicicleta.jpg" alt="Bicicleta Bikcraft Preta">
 
     <h2 class="subtitulo">Vantagens Bikcraft</h2>
 
     <div class="vantagens">
       <li class="vantagens-item">
-        <img src="eletrica.svg" alt="">
+        <img src="./eletrica.svg" alt="">
         <h3>Motor Elétrico</h3>
         <p>Permite você viajar distâncias inimaginaveis com a sua bike.</p>
       </li>
       
       <li class="vantagens-item">
-        <img src="velocidade.svg" alt="">
+        <img src="./velocidade.svg" alt="">
         <h3>40 km/h</h3>
         <p>A mais rápida bicicleta elétrica disponível hoje no mercado.</p>
       </li>
       <li class="vantagens-item">
-        <img src="rastreador.svg" alt="">
+        <img src="./rastreador.svg" alt="">
         <h3>Rastreador</h3>
         <p>Rastreador e sistema anti-furto para garantir o seu sossego.</p>
       </li>
